# timeseries-solar-irradiance

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  WORKFLOW.md  compare_models.py  comparison_metrics.csv  main.py  main_gnn.py  main_sarima.py  multisite_case_study_summary.csv  nsrdb_data_download-3.py  pyproject.toml  report.py  results_gnn.npz  results_gru.npz  results_sarima.npz  robustness_metrics.csv  run_all.sh  solar_gnn_graph.pt  solar_gru.pt  summary.ipynb  view.ipynb
.claude/: CLAUDE.md
.claude/rules/: git.md  libraries.md  python.md  testing.md  verification.md
.claude/skills/systematic-debugging/: SKILL.md
.claude/skills/tdd/: SKILL.md
.claude/skills/writing-plans/: SKILL.md
.github/: copilot-instructions.md
.github/instructions/: academic-writing.instructions.md  python.instructions.md  testing.instructions.md
.github/workflows/: ci.yml  release.yml
notebooks/: eda_cross_correlation.ipynb  eda_cross_correlation_executed.ipynb  model_comparison.ipynb  model_comparison_executed.ipynb  multisite_case_study.ipynb  robustness_analysis.ipynb
old/: report.html  report.py
presentation/: Solar Irradiance Forecasting.pptx  slides.tex  solar_presentation-3.pptx
report/: report.tex
scripts/: build_comparison_notebook.py
src/: dataset.py  dataset_gnn.py  features.py  graph.py  loader.py  metrics.py  model.py  model_gnn.py  train.py  utils.py
