[project]
name = "timeseries-solar-irradiance"
version = "0.1.0"
description = "Multi-site solar irradiance forecasting: SARIMA, GRU, GNN"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "torch>=2.0",
    "tqdm>=4.66",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
